# PDF-Data-Extractor

./: .gitignore  README.md  pyproject.toml  requirements.txt
additional_task/: additional_task.py
pdf_validator/: comparator.py  extractor.py
