[project]
name = "pdf-data-extractor"
version = "0.1.0"
description = "A feature for extracting and validating PDF structures."
authors = [
    {name = "Dilovar Odinaev",email = "dilovar11.01@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber (>=0.11.5,<0.12.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
